Added description to the about page

--- a/app/views/about/show.html.erb
+++ b/app/views/about/show.html.erb
@@ -4,11 +4,11 @@
 
 <div class="body"> 
   <div class="alert alert-success">
-    <h2>Our store</h2>
+    <h2>Our Store</h2>
     <p>our store is a small e-commerce website with a collection of over 400 interesting products</p>
   </div>
   <div class="alert alert-warning">
-    <h2>Our policy</h2>
+    <h2>Our Policy</h2>
     <p>Products are not refundable if it over 1000$ thank you for your comprehension</p>
   </div>
   <div class="alert alert-info">
