--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -47,7 +47,17 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+        <% if current_user %>
+        <li><%= link_to 'Logout', '/logout' %></li>
+      <% else %>
+        <li><%= link_to 'Login', '/login' %></li>
+        <li><%= link_to 'Signup', '/signup' %></li>
+      <% end %>
+    </li>
       </ul>
     </div>
+    <% if current_user %>
+    <div>Signed in as <%= current_user.name %></div>
+    <% end %>
   </div>
 </nav>
